--- a/res-latex/references.bib
+++ b/res-latex/references.bib
@@ -17,3 +17,30 @@
     month = {12},
     url = {http://dx.doi.org/10.2139/ssrn.4652551},
 }
+
+@book{eq-port-manag-book,
+	title = {Quantitative Equity Portfolio Management: Modern Techniques and Applications},
+	author = {Qian, Edward E. and Hua, Ronald H. and Sorensen, Eric H.},
+	year = {2007},
+	publisher = {Taylor and Francis Group},
+	isbn = {1-58488-558-0},
+	edition = {I},
+}
+
+@misc{cross-val-info,
+	title = {sklearn.model\_selection.TimeSeriesSplit},
+	author = {{scikit-learn developers}},
+	year = {2023},
+	url = {https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.TimeSeriesSplit.html},
+}
+
+@inproceedings{sgd-paper,
+	author = {Zhang, Tong},
+	title = {Solving Large Scale Linear Prediction Problems Using Stochastic Gradient Descent Algorithms},
+	booktitle = {Proceedings of the 21st International Conference on Machine Learning},
+	year = {2004},
+	address = {Banff, Canada},
+	publisher = {ACM},
+	pages = {116--123},
+	doi = {10.1145/1015330.1015332}
+}
