--- a/res-latex/model-testing.tex
+++ b/res-latex/model-testing.tex
@@ -1,14 +1,71 @@
-\begin{itemize}
-	\item portfolio return, volatility, sharpe e sortino 
-	\item 1 year of training, rolling window, Week, Month, Year
-	\item Print portfolio matrix for each one.
-	\item Print graph for each one.
-	\item print graph of weights over time
-	\item Show problem with 4 years and BDay, (next item)
-	\item Check difference in portfolio returns by starting weekly rolling window with 1 or 4/5 years of training especially consider the period around 2008-2010. This shows how the model benefits from not having training data that is too different from a period of extreme market volatility. With 1 year of training and a daily re-balancing frequency the model is much more free to adapt to extreme market conditions. (This period is in fact the period of greater volatility, see Figure \ref{fig:stock-std-plot})
-	(Look at the bearish dip around 2008-2010). This means that this model needs two memories: a long and a short memory, the long one should be correctly weighted. In this model this is happening manually when I decide with how much training data to start the rolling window approach.
-	
-	Lot of first years of training --> old memory weighs more
-	1/2 years of first training --> new memory weighs more faster
-	(Connect this with LSTM Neural Network)
-\end{itemize}
+This last section is dedicated to showing the model performance by applying the rolling window approach defined in the previous section to different situations. 
+
+Table \ref{tab:portfolio-results} shows the portfolio total return, total volatility and Sharpe ratio starting the rolling window on the given periods of historical data using a weekly (5 business days) rolling frequency.
+
+For each of these periods the portfolio matrix is provided as an Excel file in the \textit{portfolio-matrices/} folder.
+
+
+\begin{table}[htb]
+	\centering
+	\resizebox{\textwidth}{!}{%
+		\begin{tabular}{|c|c|c|c|c|c|c|c|}
+			\hline
+			\textbf{\begin{tabular}[c]{@{}c@{}}Rolling \\ Window\\ Period\end{tabular}} &
+			\textbf{Total Return} &
+			\textbf{Total Volatility} &
+			\textbf{Sharpe Ratio} &
+			\textbf{Max single return} &
+			\textbf{Min single return} &
+			\textbf{Max single volatility} &
+			\textbf{Min single volatility} \\ \hline
+			\begin{tabular}[c]{@{}c@{}}2003-12-31\\  to\\ 2019-11-29\end{tabular}      & 89.37\% & 77.60\% & 1.15 & 287.79\% & -12.12\% & 212.65\% & 155.45\% \\ \hline
+			\begin{tabular}[c]{@{}c@{}}2018-12-31\\ to\\ 2019-12-30\end{tabular}       & 21.78\% & 11.76\% & 1.85 & 34.13\%  & 13.35\%  & 33.73\%  & 26.47\%  \\ \hline
+		\end{tabular}%
+	}
+	\caption{Portfolio returns using the trading model with a rolling window approach and rebalancing frequency of one business week, thus five business days. Max/min single represent the max/min single index volatility/return between the assets of the portfolio.}
+	\label{tab:portfolio-results}
+\end{table}
+
+As we can see from Figures \ref{fig:portfolio-returns-A} and \ref{fig:portfolio-returns-B} the portfolio is risk-parity optimized. 
+
+In all three periods the portfolio has the lowest variance but still manages to compete fairly in terms of returns with all the other stocks. 
+
+In Figure \ref{fig:portfolio-weights-A} we can see the behavior of the model around 2008-2010, the weights become extremely volatile but the risk-parity approach is still able to mitigate the risk. It could be interesting to further study the correlation between a crossing of weights over time as a signal of a period of extreme market volatility.
+
+As shown in \cite{nakagawa} an LSTM Neural Network is way more efficient at describing financial assets, this is especially true thanks to the concept of long and short term memory, exactly what this linear model needs. The idea is that it would be reasonable to expect the model to care more about data that is temporally closer instead of data from years prior. The fine tuning is in how to construct long and short term memory, so that the model can adapt quickly to changes in market volatility while also keeping the information of older but nonetheless important market conditions.
+\begin{figure}[H]
+	\centering
+	\includesvg[width=\textwidth]{Images/portfolio-returns-1-Week.svg}
+	\caption{Portfolio and single stock indices cumulative returns for first rolling window period in table \ref{tab:portfolio-results}}
+	\label{fig:portfolio-returns-A}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includesvg[width=\textwidth]{Images/portfolio-weights-1-Week.svg}
+	\caption{Optimized weights over time for first rolling window period in table \ref{tab:portfolio-results}}
+	\label{fig:portfolio-weights-A}
+\end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{figure}[H]
+	\centering
+	\includesvg[width=\textwidth]{Images/portfolio-returns-16-Week.svg}
+	\caption{Portfolio and single stock indices cumulative returns for the second rolling window period in table \ref{tab:portfolio-results}}
+	\label{fig:portfolio-returns-B}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includesvg[width=\textwidth]{Images/portfolio-weights-16-Week.svg}
+	\caption{Optimized weights over time for the second rolling window period in table \ref{tab:portfolio-results}}
+	\label{fig:portfolio-weights-B}
+\end{figure}
+
+
+
+
+
+
+
