--- a/res-latex/optimization.tex
+++ b/res-latex/optimization.tex
@@ -1,23 +1,38 @@
-Since Markov first economic theories there have been developed many ways to optimize the allocation of different assets in a portfolio. Should one consider the historical average of the returns ? Should one try to find the portfolio with the highest return ? Or the standard deviation ? Or maybe one should allocate assets in a portfolio in order to reach the minimum possible variance. For this task I decided to allocate the risk instead of allocating the capital. I used a risk-parity approach that can be summed up like this: the portfolio is optimized such that each asset's contribution to the total portfolio volatility is equal. I followed the procedure in the third section of \cite{risk-parity-hard}.
+Since Markov first economic theories there have been developed many ways to optimize the allocation of different assets in a portfolio. Should one consider the historical average of the returns ? Should one try to find the portfolio with the highest return ? Or with the lowest standard deviation ? Or maybe one should allocate assets in a portfolio in order to reach the minimum possible variance. For this task I decided to allocate the risk instead of allocating the capital. I used a risk-parity approach that can be summed up like this: the portfolio is optimized such that each asset's contribution to the total portfolio volatility is equal. I followed the procedure in the third section of \cite{risk-parity-hard}.
 
 Before writing the objective function of the optimization problem, two quantities need to be introduced: the marginal risk contribution (MRC) and the risk contribution (RC). The MRC is calculated as follows:
 \begin{equation}
 	\vec{\textit{MRC}} = \mathbf{\Sigma}\vec{w}
 \end{equation}
-where $\Sigma$ is the covariance matrix of expected returns. The components of MRC represent the contribution of each asset to the portfolio volatility based on the asset's weight and its volatility.
-The Risk Contribution is obtained as follows:
+where $\Sigma$ is the covariance matrix of expected returns. The components of MRC represent the contribution of each asset to the portfolio volatility based on the asset's weight and the asset's volatility.
+
+The Risk Contribution then is:
 \begin{equation}
 	\vec{\textit{RC}} = \frac{\vec{w} * (\vec{\textit{MRC}})^T}{\Vec{w}^{T}\mathbf{\Sigma}\Vec{w}}
 \end{equation}
-where $*$ represents element-wise multiplication and the denominator is the portfolio volatility.
+where $*$ represents element-wise multiplication and the denominator is the total portfolio volatility as in eq.\eqref{portfolio-distribution}.
 Now the objective function can be constructed easily, we impose that each element of the Risk Contribution vector is equal, thus:
 \begin{equation}
 	f(\vec{x}) = \sum_{\substack{i = 1 \\ j = i + 1}}^{N} (\vec{\textit{RC}}_i (\vec{x}) - \vec{\textit{RC}}_j (\vec{x}))^2 
 	\label{risk-parity-objfunc}
 \end{equation}
 So the minimization problem, adding the constraints for a long-only trading model and complete asset allocation is:
+
 \begin{equation}
-	min_{\vec{x} \in \mathcal{R}^N_{+} : \sum_{i = 1}^{N} x_i = 1} f(\vec{x})
+	\begin{cases}
+		&\text{minimize }  f(\vec{x}) \nonumber \\
+		& \text{subject\ to:}\\
+		& \sum_{i=1}^N x_i = 1 \nonumber \\
+		&\vec{x} \in \mathcal{R}^N_{+} \nonumber \\
+	\end{cases}
+	\label{V}
 \end{equation}
-where $\vec{x}$ is the portfolio weights vector and $N$ is number of assets in the portfolio.
-The solutions to this minimization problem are the optimal, risk-parity adjusted, weights with which to build the portfolio. WHICH PYTHON FUNCTION DID YOU USE ? OR METHOD ?
+
+
+where $\vec{x}$ is the portfolio weights vector and $N$ is number of assets in the portfolio. I used the function \textit{scipy.optimize.minimize} with the Sequential Least Squares Programming method.
+
+The solutions to this minimization problem are the optimal, risk-parity adjusted, weights with which to build the portfolio.
+
+The optimization procedure has been implemented in the custom python module \textbf{optimize.py}.
+
+\clearpage
