--- a/res-latex/pca-apt.tex
+++ b/res-latex/pca-apt.tex
@@ -169,7 +169,7 @@ In Table \ref{tab:crossval-results} the cross validation results are shown. It's
 Let's consider a set of training data $(\vec{x_1}, y_1),\dots,(\vec{x_n}, y_n)$ where $\vec{x_i} \in \mathcal{R}^m$ (our principal components) and $y_i \in \mathcal{R}$ (our stock indices returns). The goal is to learn a linear scoring function $f(x) = \vec{w}^{T}\cdot\vec{x} + b$ with model parameters $\vec{w} \in \mathcal{R}^m$ (our factor exposures) and intercept $b \in \mathcal{R}$.
 To find the model parameters, the following function is minimized using the Stochastic Gradient Descent method as explained in \cite{sgd-paper}:
 \begin{equation}
-	E(\vec{w},b) = \frac{1}{n} \sum_{i=1}^n L(y_i, f(\vec{x_i}, \vec{w})) + \alpha R(\vec{w})
+	E(\vec{w},b) = \frac{1}{n} \sum_{i=1}^n L(y_i, f(\vec{x_i}, \vec{w}, b)) + \alpha R(\vec{w})
 	\label{reg-train-error}
 \end{equation}
 This function is called the regularized training error where $L$ is the Squared Epsilon Insensitive loss function and $R$ is the Elastic Net regularization term. $\alpha$ is a non negative hyperparameter that controls the regularization strength.
@@ -184,7 +184,7 @@ The Elastic Net regularization function is:
 \begin{equation}
 	R(\vec{w}) = \frac{\rho}{2} ||\vec{w}||_{2}^2 + (1-\rho)\sum_{j = 1}^{m} |w_j|
 \end{equation}
-with $\rho$ set at default library value ($0.15$). The L2 norm term makes the loss function strongly convex, and therefore it has a unique minimum. It also handles highly correlated variables better than OSL. The L1 norm (second term) handles possible sparsity of coefficients.
+with $\rho$ set at default library value ($0.15$). The L2 norm term makes the loss function strongly convex, and therefore it has a unique minimum. It also handles highly correlated variables better than OLS. The L1 norm (second term) handles possible sparsity of coefficients.
 
 Using this method on the training data we can calculate the matrix of factor exposures $\mathbf{B}$ and the matrix $\mathbf{S}$ in eq. \eqref{linear-multifactor-model} and use eq.\eqref{cov-matrix-returns} to calculate the covariance matrix of expected returns. With this matrix we can implement an optimization algorithm to find the best asset allocation for our portfolio.
 All subsequent results have been calculated using the model with the highest score (the last one in the list).
